[gd_scene load_steps=5 format=3 uid="uid://dsyb2ufp4orah"]

[ext_resource type="Texture2D" uid="uid://dal46lrrljxf8" path="res://Cards/Plus-1.png.png" id="1_1uwkb"]
[ext_resource type="Script" path="res://Operate.gd" id="1_nenep"]
[ext_resource type="Script" path="res://Operations.gd" id="1_ymk2x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vaaw8"]
size = Vector2(16, 16)

[node name="Add" type="Node2D"]
script = ExtResource("1_nenep")

[node name="Node2D" type="Node2D" parent="." node_paths=PackedStringArray("the_parent_node") groups=["Operation"]]
script = ExtResource("1_ymk2x")
the_parent_node = NodePath("..")

[node name="Sprite2D" type="Sprite2D" parent="Node2D"]
scale = Vector2(2.5, 2.5)
texture = ExtResource("1_1uwkb")

[node name="Area2D" type="Area2D" parent="Node2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Area2D"]
position = Vector2(0, -3)
scale = Vector2(2.5, 2.5)
shape = SubResource("RectangleShape2D_vaaw8")

[connection signal="body_entered" from="Node2D/Area2D" to="Node2D" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Node2D/Area2D" to="Node2D" method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Node2D/Area2D" to="Node2D" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Node2D/Area2D" to="Node2D" method="_on_area_2d_mouse_exited"]
